# react-goodreads-shelf-api

./: Cargo.toml  wrangler.toml
.github/workflows/: main_react-goodreads-shelf.yml
node/: package-lock.json  package.json  wrangler.toml
node/src/: worker-old.ts  worker.ts
rust/: Cargo.toml  wrangler.toml
rust/src/: lib.rs
src/: lib.rs
