[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.18"
scraper = "0.16.0"
worker = "0.0.15"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
